                - creme.utils.JSON.clean is deprecated; Use _.cleanJSON() instead.
                - creme.utils.JSON.readScriptText is deprecated; Use _.readJSONScriptText() instead.
        # A new module 'creme_core.core.snapshot' has been added to get the changes which occurred on a model since its loading ;
          it's already used by the history system & the new workflow engine.
        # In 'creme_core.models' :
            - The class 'django.db.models.Model' is contributed to add a method 'get_m2m_values()'
              which manages cached lists of instances linked by the 'ManyToManyFields'.
            - The model 'CremeUser' :
                - gets a new field 'uuid'.
                - gets a new method 'has_perm_or_die()' which raises exceptions with friendly error messages.
            - The model 'FileRef' :
                - gets a new optional field "description"; it's used by the new view
                  which displays all FileRefs (so feel free to fill it).
                - the field 'filedata' has now a max_length equal 500 (it was 200 previously).
                  As the previous value was smaller than 'documents.Document.filedata.max_length',
                  it could cause issue when deleting a Document with a long name.
        # A new method 'creme_core.tests.base._CremeTestCase.clear_global_info()' has been added.
        # In 'creme_core.utils' :
            - The 'CremeDiscoverRunner.setup_databases' method has been updated to prevent running
              the 'creme_populate' command on the default test database when the test suite is launched in
              parallel mode. This change is done to prevent cache leaking when the test processes are forked.
        # Apps :
            * Persons :
                - The model 'Address' gets new semantic fields (like ZipCodeField) which allow to
                  easily customise things (like the form field, the field printer etc...).
            * Activities: